--- a/lists/testnet-token-list/package.json
+++ b/lists/testnet-token-list/package.json
@@ -5,16 +5,14 @@
   "main": "build/koan-test.tokenlist.json",
   "scripts": {
     "test": "mocha",
-    "build": "rimraf build && mkdir -p build && node internal/write.js > build/koan-testnet.tokenlist.json",
+    "build": "rimraf build && mkdir build && node internal/write.js > build/koan-testnet.tokenlist.json",
     "prepublishOnly": "pnpm test && pnpm run build",
-    "sync": "node internal/sync.js",
-    "syncDB": "prisma generate --data-proxy --schema=./internal/schema.prisma && ts-node ./internal/syncDB.ts",
     "volume": "ts-node ./internal/tokenVolumes.ts",
     "ci:version": "pnpm version minor",
     "ci:publish": "pnpm publish --access public --tag latest"
   },
   "files": [
-    "build/build/koan-test.tokenlist.json"
+    "build/koan-test.tokenlist.json"
   ],
   "repository": {
     "type": "git",
