--- a/.github/workflows/test-default-token-list.yml
+++ b/.github/workflows/test-default-token-list.yml
@@ -2,7 +2,7 @@ name: "Test Token List"
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - "lists/testnet-token-list/tokens/**"
   pull_request:
