--- a/lists/testnet-token-list/package.json
+++ b/lists/testnet-token-list/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@koanprotocol/test-token-list",
-  "version": "0.0.0",
+  "name": "@koanprotocol/testnet-token-list",
+  "version": "1.1.0",
   "description": "koan protocol test token list",
   "main": "build/koan-test.tokenlist.json",
   "scripts": {
     "test": "mocha",
-    "build": "rimraf build && mkdir build && node internal/write.js > build/koan-testnet.tokenlist.json",
+    "build": "rimraf build && mkdir -p  build && node internal/write.js > build/koan-testnet.tokenlist.json",
     "prepublishOnly": "pnpm test && pnpm run build",
     "volume": "ts-node ./internal/tokenVolumes.ts",
     "ci:version": "pnpm version minor",
