--- a/apis/token-logo/vercel.json
+++ b/apis/token-logo/vercel.json
@@ -5,5 +5,11 @@
       "use": "@vercel/python"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
