--- a/apis/token-logo/vercel.json
+++ b/apis/token-logo/vercel.json
@@ -5,11 +5,5 @@
       "use": "@vercel/python"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.py" }]
 }
