--- a/lists/tokenLists/package.json
+++ b/lists/tokenLists/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://koanprotocol.xyz",
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/solidity": "^5.3.0",
     "@octokit/rest": "^18.6.2",
