--- a/lists/tokenLists/package.json
+++ b/lists/tokenLists/package.json
@@ -58,6 +58,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0"
+    "@prisma/client": "^5.13.0",
+    "ajv-formats": "^3.0.1"
   }
 }
