--- a/apis/tokenapi/package.json
+++ b/apis/tokenapi/package.json
@@ -4,22 +4,16 @@
   "private": true,
   "scripts": {
     "check": "tsc --pretty --noEmit",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .vercel",
-    "preinstall": "prisma generate"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .vercel"
   },
   "type": "module",
   "dependencies": {
     "@koanprotocol/token-list": "workspace:^",
-    "@neondatabase/serverless": "^0.9.3",
-    "@prisma/adapter-neon": "^5.13.0",
-    "@prisma/client": "^5.13.0",
-    "@prisma/extension-accelerate": "^1.0.0",
     "@types/node": "^20.12.11",
     "@types/ws": "^8.5.10",
     "@vercel/node": "3.0.9",
     "@wagmi/core": "^2.10.4",
     "dotenv": "^16.4.5",
-    "prisma": "^5.13.0",
     "viem": "^2.10.3",
     "ws": "^8.17.0",
     "zod": "^3.23.8"
