--- a/apis/tokenapi/tsconfig.json
+++ b/apis/tokenapi/tsconfig.json
@@ -5,8 +5,6 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "noEmit": true,
-    "module": "esnext",
-    "moduleResolution": "bundler"
+    "noEmit": true
   }
 }
