--- a/apis/tokenapi/package.json
+++ b/apis/tokenapi/package.json
@@ -6,12 +6,13 @@
     "check": "tsc --pretty --noEmit",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .vercel"
   },
+  "type": "module",
   "dependencies": {
     "@koanprotocol/token-list": "workspace:^",
     "@types/node": "^20.12.11",
     "@types/ws": "^8.5.10",
     "@vercel/node": "3.0.9",
-    "@wagmi/core": "^2.10.4",
+    "@wagmi/core": "2.13.1",
     "dotenv": "^16.4.5",
     "viem": "^2.10.3",
     "ws": "^8.17.0",
